--- a/server/.env
+++ b/server/.env
@@ -6,9 +6,9 @@ ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=hostel-aur-backend
 REFRESH_TOKEN_EXPIRY=10d
 
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=dashytynb
+CLOUDINARY_API_KEY=564984792972249
+CLOUDINARY_API_SECRET=4XEXBvsIHYfe_cxXjiudo0zbECs
 
 EMAIL_SERVICE=gmail
 EMAIL_USER=omsahcoder@gmail.com
