--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.56.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.2.0",
     "yup": "^1.6.1"
   },
